--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "next": "14.2.7",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18"
   }
 }
