--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "@getbrevo/brevo": "^2.2.0",
     "firebase": "^10.13.1",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
@@ -19,6 +20,7 @@
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "@getbrevo/brevo": "^2.2.0",
     "prettier": "3.3.3"
   }
 }
