--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.13.1",
     "lucide-react": "^0.439.0",
-    "next": "14.2.7",
+    "next": "^14.2.11",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
