--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
     "@getbrevo/brevo": "^2.2.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "firebase": "^10.13.1",
     "lucide-react": "^0.439.0",
     "next": "^14.2.11",
