--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compsoc",
+  "name": "castrando-ando",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
     "bootstrap-icons": "^1.11.3",
     "firebase": "^10.13.1",
     "lucide-react": "^0.439.0",
-    "next": "^14.2.11",
+    "next": "^15.1.2",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
@@ -22,6 +22,6 @@
   },
   "devDependencies": {
     "@getbrevo/brevo": "^2.2.0",
-    "prettier": "3.3.3"
+    "prettier": "^3.4.2"
   }
 }
