--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@getbrevo/brevo": "^2.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cloudinary": "^2.5.1",
     "firebase": "^10.13.1",
     "lucide-react": "^0.439.0",
     "next": "^15.1.2",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
