--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@getbrevo/brevo": "^2.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "canvas": "^3.0.1",
     "cloudinary": "^2.5.1",
     "firebase": "^10.13.1",
     "lucide-react": "^0.439.0",
