--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap-icons": "^1.11.3",
     "canvas": "^3.0.1",
     "cloudinary": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "firebase": "^10.13.1",
     "lucide-react": "^0.439.0",
     "next": "^14.2.21",
