--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,7 +21,7 @@
     "@mui/material": "^6.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "canvas": "^3.0.1",
+    "canvas": "^2.11.2",
     "cloudinary": "^2.5.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -27,6 +29,7 @@
     "lucide-react": "^0.439.0",
     "next": "^14.2.21",
     "next-cloudinary": "^6.16.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.1.0",
@@ -35,6 +38,11 @@
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
-    "@getbrevo/brevo": "^2.2.0"
+    "@getbrevo/brevo": "^2.2.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
