--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@mui/material": "^6.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "canvas": "^3.1.0",
     "cloudinary": "^2.5.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -35,15 +34,19 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "canvas": "3.1.0"
   },
   "devDependencies": {
-    "@getbrevo/brevo": "^2.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.2",
+    "canvas": "2.11.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
+  },
+  "peerDependencies": {
+    "canvas": "2.11.2"
   }
 }
