--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.5",
-    "canvas": "3.1.0"
+    "canvas": "^3.1.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
