--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:models": "jest models/",
+    "test:volunteer": "jest models/Volunteer.test.js",
+    "test:raffle": "jest models/Raffle.test.js",
+    "test:ally": "jest models/Ally.test.js",
+    "test:product": "jest models/Product.test.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -29,7 +34,6 @@
     "lucide-react": "^0.439.0",
     "next": "^14.2.21",
     "next-cloudinary": "^6.16.0",
-    "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.1.0",
@@ -42,6 +46,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "node-fetch": "^2.7.0"
   }
 }
